Initial commit Replaced window.onresize with requestAnimationFrame loop, this fixes jagged movements of crop box move in Chrome. CSS: Workspace (canvas obj) animates via transition to chosen crop area; count 1px border in crop box width to remove 1px gap between shadow and cropbox edge

--- a/client/blocks/image-editor/style.scss
+++ b/client/blocks/image-editor/style.scss
@@ -55,7 +55,8 @@
 	position: absolute;
 	top: 50%;
 	left: 50%;
-
+	transition: transform 0.15s linear;
+	will-change: transform;
 	&.is-placeholder {
 		@include placeholder-dark();
 	}
@@ -65,6 +66,7 @@
 	position: absolute;
 	border: 1px solid $white;
 	cursor: move;
+	box-sizing: border-box;
 }
 
 .image-editor__crop-background {
